testing out gradle with max-worker setting; adding more mem to each worker instance
Signed-off-by: automike <mikeliucc@users.noreply.github.com>